[gd_scene load_steps=29 format=3 uid="uid://jlne7yb34k24"]

[ext_resource type="Script" uid="uid://dy4dnbfxhmd23" path="res://resource/ui/menu/game/task_bar.gd" id="1_36ysp"]
[ext_resource type="Texture2D" uid="uid://d0tkwo2kqoupu" path="res://assets/ui/ui.png" id="1_ociga"]
[ext_resource type="Texture2D" uid="uid://dc2dhq7qhfvec" path="res://themes/wood/graphics/expandBtnNormal.png" id="5_08evb"]
[ext_resource type="Texture2D" uid="uid://b8asnwa4cvbfk" path="res://themes/wood/graphics/smallBtnNormalSingle.png" id="5_l8ogx"]
[ext_resource type="Script" uid="uid://cj1xykbtsmsri" path="res://resource/components/ui/buttons/button_small.gd" id="6_08evb"]
[ext_resource type="Texture2D" uid="uid://chq8lw3dm6ppa" path="res://themes/wood/graphics/expandBtnPressed.png" id="6_u4twp"]
[ext_resource type="Texture2D" uid="uid://d05g6gyhk8t6j" path="res://themes/wood/graphics/expandBtnOver.png" id="7_3oksy"]
[ext_resource type="Texture2D" uid="uid://bsask3iusjohx" path="res://themes/wood/graphics/expandBtnDisabled.png" id="8_4o3q1"]
[ext_resource type="Texture2D" uid="uid://syyp8krxy8jp" path="res://assets/ui/icons/icon2.png" id="9_4cxdb"]
[ext_resource type="Script" uid="uid://g0cotbm5t03y" path="res://resource/components/ui/buttons/button_expand.gd" id="10_xd0gr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hxv3c"]
texture = ExtResource("5_08evb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ihut6"]
texture = ExtResource("6_u4twp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uf7ap"]
texture = ExtResource("7_3oksy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m47no"]
texture = ExtResource("8_4o3q1")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8ogx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0clue"]
atlas = ExtResource("9_4cxdb")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieplm"]
atlas = ExtResource("1_ociga")
region = Rect2(753, 234, 225, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wi548"]
texture = ExtResource("5_l8ogx")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08evb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u4twp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3oksy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4o3q1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4cxdb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xd0gr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ykf3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0clue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqo7q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3nbbr"]

[node name="TaskBar" type="Control"]
custom_minimum_size = Vector2(282, 415)
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -207.5
offset_right = 280.0
offset_bottom = 207.5
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_36ysp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -207.5
offset_bottom = 207.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LabelMargin"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 26
text = "当前任务"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_right = -16

[node name="BtnExpand" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "查看当前任务
快捷键 [b][color=white]T[/color][/b]ask"
theme_override_styles/normal = SubResource("StyleBoxTexture_hxv3c")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ihut6")
theme_override_styles/hover = SubResource("StyleBoxTexture_uf7ap")
theme_override_styles/disabled = SubResource("StyleBoxTexture_m47no")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l8ogx")
toggle_mode = true
icon = SubResource("AtlasTexture_0clue")
icon_alignment = 1
script = ExtResource("10_xd0gr")
metadata/_custom_type_script = "uid://g0cotbm5t03y"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
z_index = 1
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("AtlasTexture_ieplm")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TaskMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin"]
custom_minimum_size = Vector2(240, 320)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 8

[node name="TaskContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonSmall" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u4twp")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3oksy")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4o3q1")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall4" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4cxdb")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall5" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xd0gr")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall6" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6ykf3")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall7" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0clue")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall8" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qqo7q")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[node name="ButtonSmall9" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/TaskMargin/ScrollContainer/MarginContainer/TaskContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wi548")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08evb")
theme_override_styles/hover = SubResource("StyleBoxFlat_08evb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08evb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3nbbr")
text = "任务1"
alignment = 0
script = ExtResource("6_08evb")
metadata/_custom_type_script = "uid://cj1xykbtsmsri"

[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2/BtnExpand" to="." method="_on_btn_expand_toggled"]
